--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,6 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "json-server": "^1.0.0-beta.3"
+    "json-server": "^0.17.0"
   }
 }
